--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
 <script style="color: black;">
   (function(){
     // ====== CONFIGURE THIS ======
-    const CORRECT_EMAIL = "dhanu@gmail.com";
-    const CORRECT_PASS  = "12345";
+    const CORRECT_EMAIL = "";
+    const CORRECT_PASS  = "";
     // Set URL to your main site. Use relative path or full URL:
     const REDIRECT_URL = "home.html";
     // ===========================
@@ -100,3 +100,4 @@
 </script>
 </body>
 </html>
+
