--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
 <script style="color: black;">
   (function(){
     // ====== CONFIGURE THIS ======
-    const CORRECT_EMAIL = "";
-    const CORRECT_PASS  = "";
+    const CORRECT_EMAIL = "sandeep@gmail.com";
+    const CORRECT_PASS  = "12345";
     // Set URL to your main site. Use relative path or full URL:
     const REDIRECT_URL = "home.html";
     // ===========================
@@ -100,4 +100,5 @@
 </script>
 </body>
 </html>
+
 
